feat: Implement orchestration service for test runs
- Add TestRunRepository for managing test run data.
- Create AiEngineClient to communicate with the AI engine for test case generation.
- Implement ExecutionServiceClient for executing test cases.
- Enable asynchronous processing with AsyncConfig.
- Develop TestController for initiating test runs.
- Create TestRunController for managing test run lifecycle.
- Define TestRunRequest and TestRunResponse DTOs for request and response handling.
- Implement AiAnalysisRequest and AiAnalysisResponse DTOs for AI engine communication.
- Create TestRun model to represent test run entities.
- Implement TestOrchestrationService to coordinate test run processes.
- Add ProjectController for managing projects in the test management service.
- Define ProjectDTO for project data transfer.
- Implement error handling with GlobalExceptionHandler and ErrorResponse.
- Create ResourceNotFoundException for handling not found scenarios.
- Implement Project model and ProjectRepository for project data management.
- Develop ProjectService for business logic related to projects.

--- a/orchestration-service/src/main/resources/application.properties
+++ b/orchestration-service/src/main/resources/application.properties
@@ -1,1 +1,31 @@
+# Server Configuration
+server.port=8082
 spring.application.name=orchestration-service
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/selai_orchestration
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# Python AI Engine Configuration
+ai.engine.base-url=http://localhost:5000
+
+# Execution Service Configuration
+execution.service.base-url=http://localhost:8083
+
+# Logging
+logging.level.root=INFO
+logging.level.com.ns.selai.orchestration=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# Async Configuration
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=10
+spring.task.execution.pool.queue-capacity=100
