--- a/test-management-service/src/main/resources/application.properties
+++ b/test-management-service/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+# Server Configuration
+server.port=8081
 spring.application.name=test-management-service
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/selai_testmgmt
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+# Logging
+logging.level.root=INFO
+logging.level.com.ns.selai.testmanagement=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# API Documentation
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
