--- a/test-management-service/src/main/resources/application.properties
+++ b/test-management-service/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=test-management-service
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/selai_testmgmt
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=niraj1202
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
