--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+# Server Configuration
+server.port=8080
 spring.application.name=api-gateway
+
+# Routing Configuration
+spring.cloud.gateway.routes[0].id=test-management-service
+spring.cloud.gateway.routes[0].uri=http://localhost:8081
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/projects/**, /api/test-suites/**
+
+spring.cloud.gateway.routes[1].id=orchestration-service
+spring.cloud.gateway.routes[1].uri=http://localhost:8082
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/test-runs/**
+
+spring.cloud.gateway.routes[2].id=execution-service
+spring.cloud.gateway.routes[2].uri=http://localhost:8083
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/execute/**
+
+spring.cloud.gateway.routes[3].id=reporting-service
+spring.cloud.gateway.routes[3].uri=http://localhost:8084
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/reports/**
+
+# Logging
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.root=INFO
