--- a/execution-service/pom.xml
+++ b/execution-service/pom.xml
@@ -20,8 +20,9 @@
     <description>Selenium Test Execution Service for SelAi</description>
 
     <properties>
-        <java.version>21</java.version>
+        <java.version>17</java.version>
         <selenium.version>4.16.1</selenium.version>
+        <lombok.version>1.18.30</lombok.version>
     </properties>
 
     <dependencies>
@@ -102,6 +103,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
