--- a/execution-service/src/main/resources/application.properties
+++ b/execution-service/src/main/resources/application.properties
@@ -1,1 +1,44 @@
+# Execution Service Configuration
 spring.application.name=execution-service
+server.port=8083
+
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/selai_execution
+spring.datasource.username=postgres
+spring.datasource.password=niraj1202
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# Logging Configuration
+logging.level.org.springframework.web=INFO
+logging.level.com.ns.selai=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Screenshot Storage Configuration
+execution.screenshot.path=./screenshots/
+execution.screenshot.enabled=true
+
+# Browser Configuration
+execution.browser.default=chrome
+execution.browser.headless=false
+execution.browser.window.width=1920
+execution.browser.window.height=1080
+execution.browser.timeout.implicit=10
+execution.browser.timeout.explicit=30
+
+# Orchestration Service Configuration
+orchestration.service.url=http://localhost:8082
+orchestration.service.timeout=30000
+
+# Management Endpoints
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
