--- a/reporting-service/src/main/resources/application.properties
+++ b/reporting-service/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+# Server Configuration
+server.port=8084
 spring.application.name=reporting-service
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/selai_rept
+spring.datasource.username=postgres
+spring.datasource.password=niraj1202
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# Logging
+logging.level.root=INFO
+logging.level.com.ns.selai.reporting=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
